src/test/let/let_infer_type.stderr
error: mismatched types
  --> $DIR/let_infer_type.sq:5:13
   |
LL |     let a = 5;
   |             ^ expected `()`, found `i32`