src/test/let/let_infer_type.sq

// Type inference for let bindings is not supported currently by the compiler

fn main() {
    let a = 5;
}
